...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="30dp">

                    <include
                        android:id="@+id/container_list_news_include_on_fragment_main"
                        layout="@layout/container_list_news"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
...
